# End_To_End_Pipeline

./: .dockerignore  Dockerfile  Makefile  README.md  app.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.gemini/: config.yaml
.github/workflows/: cd.yml  ci.yml  tests.yml
airflow/dags/: batch_ingestion_dag.py  data_quality_dag.py  monitoring_dag.py
airflow/plugins/: gx_validation_operator.py  spark_submit_operator.py
catalog/: datahub_config.yml  openmetadata_config.yaml
common/config/: __init__.py  config.py  staging.yaml
common/logger/: logger.py
config/: config.yaml  dev.yaml  prod.yaml
data_pipeline/ingestion/: base_ingestor.py  factory.py  ingestion_from_csv.py  ingestion_from_xml.py  ingestion_from_yaml.py
data_pipeline/loaders/: to_minio.py
db/init/: init_postgres.sql
docs/: README.md
governance/great_expectations/: great_expectations.yml
infra/: docker-compose.yml
kafka/: consumer_debug.py  producer.py
minio/: buckets.txt  init_buckets.py
monitoring/alerts/: alert_rules.yml
monitoring/prometheus/: prometheus.yml
notifications/: slack_webhook.py  telegram_bot.py
rbac/: airflow_roles.yaml  db_users.sql
scripts/: init_infra.sh  load_test_data.py
sdk/tests/: test_client.py
sdk/your_sdk/: __init__.py  cli.py  client.py  config.py
secrets/: README.md
secrets/vault/: vault_config.hcl
secrets/vault/policies/: pipeline_policy.hcl
spark/batch/: batch_job.py
spark/streaming/: streaming_job.py
tests/: __init__.py  conftest.py  requirements-test.txt
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
